# MafiaGameGenerator

./: .gitignore  Cargo.toml  MafiaGameGenerator.cpp  MafiaGameGenerator.sln  MafiaGameGenerator.vcxproj  MafiaGameGenerator.vcxproj.filters  Role.cpp  Role.h
src/: config.rs  error.rs  game_setup.rs  generator.rs  io_handler.rs  main.rs  role.rs  updater.rs
x64/Release/: ЄҐЄ.txt  ЏаЁўҐв.txt  ЏаҐб.txt  џаЁЄ.txt  ”.txt
